--- a/test2.html
+++ b/test2.html
@@ -23,8 +23,7 @@
                 background: transparent url('img/banner-findus.png') 0% 0% no-repeat padding-box;
                 background-size: contain;
             }
-            .d-pic {
-                margin-top: 600px;
+            .d-content {
                 margin-left: 140px;
                 margin-right: 140px;
             }
