--- a/aboutus.html
+++ b/aboutus.html
@@ -24,7 +24,7 @@
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/custom.css" rel="stylesheet">
         <link href="css/top-bar.css" rel="stylesheet">
-        <!-- <link href="css/home.css" rel="stylesheet"> -->
+        
         <link href="css/aboutus.css" rel="stylesheet">
         <link href="css/app.css" rel="stylesheet">
         <style>
@@ -44,7 +44,7 @@
                 /* background-size: contain; */
             }
             .bg2 {
-                top: 900px;
+                top: 300px;
                 left: 0px;
                 width: 100%;
                 height: 100%;
@@ -59,7 +59,6 @@
                 /* height: 1102px; */
                 height: 100%;
                 position: absolute;
-                background: transparent url('img/image-parkhistory.png') 0% 0% no-repeat padding-box;
                 opacity: 1;
             }
             .bg4 {
@@ -214,10 +213,8 @@
             <img src="img/banner-aboutus2.png" alt="" width="100%">
         </div>
     </div>
-    <div class="row">
-        <div class="col-12 bg3">
-            <img src="img/image-parkhistory.png" alt="" width="100%">
-        </div>
+    <div class="bg3">
+        <img src="img/image-parkhistory.png" alt="" width="100%">
     </div>
     <header id="page-topbar">
         <div class="header-gradient">
