--- a/mascots/mascot.html
+++ b/mascots/mascot.html
@@ -31,54 +31,12 @@
                 background-repeat: repeat-y;
             }
             .bg1 {
-                top: 0px;
-                left: 0px;
                 width: 100%;
-                height: 1200px;
-                position: absolute;
-                background: transparent url('../img/banner-mascot.png') 0% 0% no-repeat padding-box;
+                height: 100%;
             }
-            .d-pic {
-                margin-top: 1100px;
+            .d-content {
                 margin-left: 250px;
                 margin-right: 250px;
-            }
-            .leaf-sketch-01 {
-                top: 2035px;
-                left: -94.8489990234375px;
-                width: 268px;
-                height: 273px;
-                position: absolute;
-            }
-            .dino-sketch-01 {
-                top: 913px;
-                left: -992px;
-                width: 1254px;
-                height: 463px;
-                transform: scaleX(-1);
-                position: absolute;
-            }
-            .dino-sketch-02 {
-                top: 535px;
-                left: 1520px;
-                width: 1169px;
-                height: 683px;
-                position: absolute;
-            }
-            .dino-sketch-03 {
-                top: 1592px;
-                left: 1658px;
-                width: 1254px;
-                height: 463px;
-                transform: scaleX(-1);
-                position: absolute;
-            }
-            .stain1 {
-                top: 234px;
-                left: 1083px;
-                width: 1381px;
-                height: 415px;
-                position: absolute;
             }
             @media screen and (max-width: 1024px){
                 .bg1 {
@@ -92,38 +50,18 @@
                     flex: 0 0 50%;
                     max-width: 50%;
                 }
-                .leaf-sketch-01 {
-                    display: none;
-                }
-                .dino-sketch-03 {
-                    display: none;
-                }
-                .d-pic {
-                    margin-top: 500px !important;
+                .d-content {
                     margin-left: 50px !important;
                     margin-right: 50px !important;
                 }
             }
             @media screen and (max-width: 600px) {
-                .d-pic {
-                    margin-top: 150px !important;
+                .d-content {
                     margin-left: 0px !important;
                     margin-right: 0px !important;
                 }
                 .p--5 {
                     margin-left: -45px;
-                }
-                .stain1 {
-                    top: -300px;
-                    left: 25%;
-                }
-                .dino-sketch-02 {
-                    top: 75px;
-                    left: 20%;
-                }
-                .dino-sketch-03 {
-                    top: 1352px;
-                    left: 30%;
                 }
                 .pic-foot {
                     flex: 0 0 100% !important;
@@ -133,6 +71,11 @@
         </style>
     </head>
 <body>
+    <div class="row">
+        <div class="col-12 bg1">
+            <img src="../img/banner-mascot.png" alt="" width="100%">
+        </div>
+    </div>
     <header id="page-topbar">
         <div class="header-gradient"></div>
         <div class="top-bar"></div>
@@ -141,35 +84,7 @@
         
         <div class="container-fluid" >
             
-            <div class="row">
-                <div class="col-12">
-                    <img class="stain1" src="../img/stain1.png" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <img class="dino-sketch-01" src="../img/dino-sketch-01.png" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <img class="dino-sketch-02" src="../img/dino-sketch-02.png" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <img class="dino-sketch-03" src="../img/dino-sketch-01.png" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-2">
-                    <img class="leaf-sketch-01" src="../img/leaf-sketch-01.png" alt="">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 bg1"></div>
-            </div>
-            <div class="d-pic">
+            <div class="d-content">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 text-center">
                         <p class="Skranji font-size-48">GET TO KNOW OUR MASCOTS</p>
