--- a/policy.html
+++ b/policy.html
@@ -31,16 +31,10 @@
                 background-repeat: repeat-y;
             }
             .bg1 {
-                top: 0px;
-                left: 0px;
                 width: 100%;
-                height: 1046px;
-                position: absolute;
-                background: transparent url('img/banner-home.png') 0% 0% no-repeat padding-box;
-                /* background-size: contain; */
+                height: 100%;
             }
-            .d-pic {
-                margin-top: 950px;
+            .d-content {
                 margin-left: 140px;
                 margin-right: 140px;
             }
@@ -99,8 +93,7 @@
                     height: 100% !important;
                     background-size: contain !important;
                 }
-                .d-pic {
-                    margin-top: 500px !important;
+                .d-content {
                     margin-left: 0px !important;
                     margin-right: 0px !important;
                 }.font-size-48 {
@@ -117,8 +110,7 @@
                 }
             }
             @media screen and (max-width: 600px) {
-                .d-pic {
-                    margin-top: 150px !important;
+                .d-content {
                     margin-left: 0px !important;
                     margin-right: 0px !important;
                 }
@@ -150,6 +142,11 @@
         </style>
     </head>
 <body>
+    <div class="row">
+        <div class="col-12 bg1">
+            <img src="img/banner-home.png" alt="" width="100%">
+        </div>
+    </div>
     <header id="page-topbar">
         <div class="header-gradient"></div>
         <div class="top-bar"></div>
@@ -181,15 +178,7 @@
                     <img class="stain2" src="img/stain1.png" alt="">
                 </div>
             </div>
-            <!-- <div class="row">
-                <div class="col-12">
-                    <img class="stain3" src="img/stain1.png" alt="">
-                </div>
-            </div> -->
-            <div class="row">
-                <div class="col-12 bg1"></div>
-            </div>
-            <div class="d-pic">
+            <div class="d-content">
                 <div class="row">
                     <div class="col-12 text-center">
                         <p class="Skranji font-size-48" style="text-transform: uppercase;">Privacy Policy for Customer</p>
