--- a/svg/topbar.html
+++ b/svg/topbar.html
@@ -2,8 +2,8 @@
 
     <nav class="navbar">
       <div class="row div-logo-top-bar">
-        <div class="col-md-3">
-          <img src="img/Dino-park_logo-2.png" alt="" class="logo-top-bar" width="100%">
+        <div class="col-md-12">
+          <img src="img/Dino-park_logo-2.png" alt="" class="logo-top-bar" width="100%" height="80px">
         </div>
       </div>
         <div class="navbar-container container">
