--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
                 margin-left: 280px;
                 margin-right: 280px;
             }
+            .head-video {
+                margin-left: 180px;
+                margin-right: 180px;
+            }
             .text2-box {
                 margin-left: 280px;
                 margin-right: 280px;
@@ -182,6 +186,10 @@
                     font-size: 32px;
                 }
                 .head-box {
+                    margin-left: 0px;
+                    margin-right: 0px;
+                }
+                .head-video {
                     margin-left: 0px;
                     margin-right: 0px;
                 }
@@ -308,13 +316,19 @@
                         </div>
                     </div>
                 </div>
-                
-                <div class="row head-box">
-                    <div class="col-md-12 col-sm-12 text-center">
+                <div class="row head-video">
+                    <div class="col-md-6 col-sm-12 text-center mb-3">
                         <iframe class="show-video" src="https://www.youtube.com/embed/P45g-aLCOqA?si=5aBg1n9s4F672KU9" title="YouTube video player" 
                             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                         </iframe>
                     </div>
+                    <div class="col-md-6 col-sm-12 text-center mb-3">
+                        <iframe class="show-video" src="https://www.youtube.com/embed/i5f3wioibHA?si=dmD8D6XkaOPrzxHr" title="YouTube video player" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+                <div class="row head-box">
                     <div class="col-12 text-center mt-4">
                         <p class="Skranji head-topic ">CHOOSE YOUR TICKET</p>
                     </div>
