--- a/dinosaurs/Dilophosaurus.html
+++ b/dinosaurs/Dilophosaurus.html
@@ -208,7 +208,7 @@
                             <hr class="nhr">
                         </div>
                     </div>
-                    <div class="col-md-6 col-sm-6">
+                    <div class="col-md-6 col-sm-6 mt-4">
                         <img src="../img/dino/Dilophosaurus/size-Dilophosaurus.png" alt="" width="100%">
                         <p class="font-size-24 text-right">Length : 6 meters (20 ft) | Height : 3 meters (10 ft)</p>
                     </div>
