--- a/aboutus.html
+++ b/aboutus.html
@@ -37,7 +37,7 @@
               
             }
             .bg2 {
-                top: 300px;
+                /* top: 300px; */
                 left: 0px;
                 width: 100%;
                 height: 100%;
@@ -100,7 +100,7 @@
                 margin-right: 280px;
             }
             .text2-box {
-                margin-top: 900px;
+                margin-top: 15px;
                 margin-left: 280px;
                 margin-right: 280px;
             }
@@ -134,14 +134,13 @@
             }
             @media screen and (max-width: 1024px) {
                 .head-topic {
-                    font-size: 36px;
+                    font-size: 28px;
                 }
                 .head-box {
                     margin-left: 0px !important;
                     margin-right: 0px !important;
                 }
                 .text2-box {
-                    margin-top: 480px;
                     margin-left: 0 !important;
                     margin-right: 0 !important;
                 }
@@ -165,19 +164,18 @@
                     display: none;
                 }
                 .head-topic {
-                    font-size: 20px !important;
+                    font-size: 16px !important;
                 }
                 .head-box {
                     margin-left: 0px !important;
                     margin-right: 0px !important;
                 }
                 .text2-box {
-                    margin-top: 230px !important;
                     margin-left: 0px !important;
                     margin-right: 0px !important;
                 }
                 .text1 {
-                    font-size: 16px !important;
+                    font-size: 12px !important;
                 }
                 .img-foot {
                     margin-bottom: 80px;
@@ -196,9 +194,6 @@
         <div class="col-12 bg1">
             <img src="img/banner-aboutus2.png" alt="" width="100%">
         </div>
-    </div>
-    <div class="bg3">
-        <img src="img/image-parkhistory.png" alt="" width="100%">
     </div>
     <header id="page-topbar">
         <div class="header-gradient">
@@ -239,18 +234,6 @@
                         </p>
                     </div>
                 </div>
-                <!-- <div class="row mt-2">
-                    <div class="col-12 btn-seemore text-center">
-                        <button onclick="hidecontent()" style="border: 0; background-color: transparent;">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20%" viewBox="0 0 400 90" class="mr-3 bt-sm">
-                                    <g id="button-seemore" transform="translate(-1111 -778.615)">
-                                      <rect id="Rectangle_44" data-name="Rectangle 44" width="400" height="90" rx="20" transform="translate(1111 778.615)" fill="#7f7f4e"/>
-                                      <text id="See_more" data-name="See more" transform="translate(1311 835.615)" fill="#fdf3ec" font-size="32" font-family="Lexend" font-weight="600"><tspan x="-70" y="0">See More</tspan></text>
-                                    </g>
-                            </svg>
-                        </button>
-                    </div>
-                </div> -->
                 <div class="row mt-4">
                     <div class="col-12 text-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20%" viewBox="0 0 400 90" class="mr-3 bt-sm">
@@ -274,7 +257,9 @@
                         </svg>
                     </div>
                 </div>
-                
+                <div class="row">
+                    <img src="img/image-parkhistory.png" alt="" width="100%">
+                </div>
                 <div class="row text2-box">
                     <div class="col-12 text-center">
                         <p class="text1 font-size-28">
@@ -430,41 +415,6 @@
                         </a>
                     </div>
                 </div>
-                <!-- <div class="row mt-4">
-                    <div class="col-12 text-center">
-                        <p class="Skranji head-topic">GET TO KNOW OUR MASCOTS</p>
-                    </div>
-                </div>
-                <div class="row e-group">
-                    <div class="row">
-                        <div class="col-4 text-center">
-                            <img src="img/Mascot1.png" alt="" width="100%">
-                            <p class="Lexend-extra font-size-36">Pete</p>
-                        </div>
-                        <div class="col-4 text-center">
-                            <img src="img/Mascot2.png" alt="" width="100%">
-                            <p class="Lexend-extra font-size-36">Danny</p>
-                        </div>
-                        <div class="col-4 text-center">
-                            <img src="img/Mascot3.png" alt="" width="100%">
-                            <p class="Lexend-extra font-size-36">Latte</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4 text-center">
-                            <img src="img/Mascot4.png" alt="" width="100%">
-                            <p class="Lexend-extra font-size-36">Toby</p>
-                        </div>
-                        <div class="col-4 text-center">
-                            <img src="img/Mascot5.png" alt="" width="100%">
-                            <p class="Lexend-extra font-size-36">Tiny</p>
-                        </div>
-                        <div class="col-4 text-center">
-                            <img src="img/Mascot6.png" alt="" width="100%">
-                            <p class="Lexend-extra font-size-36">Serena</p>
-                        </div>
-                    </div>
-                </div> -->
                 <div class="row">
                     <div class="col-12 text-center img-foot">
                         <img src="img/image-mascotgroup3.png" alt="" width="100%">
