--- a/index.html
+++ b/index.html
@@ -35,22 +35,6 @@
                 width: 100%;
                 height: 100%;
             }
-            .bg2 {
-                top: 900px;
-                left: 0px;
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                opacity: 1;
-            }
-            .bg3 {
-                top: 2258px;
-                left: 0px;
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                opacity: 1;
-            }
             .header-gradient {
                 top: 0px;
                 left: 0px;
@@ -142,10 +126,6 @@
                 margin-left: 280px;
                 margin-right: 280px;
             }
-            .head-video {
-                margin-left: 180px;
-                margin-right: 180px;
-            }
             .text2-box {
                 margin-left: 280px;
                 margin-right: 280px;
@@ -154,10 +134,8 @@
                 margin-top: 3rem;
             }
             .dino-twin {
-                margin-top: 495px;
+                margin-top: -255px;
             }
-           
-            
             .es {
                 margin-top: 550px;
                 font-size: 48px;
@@ -175,7 +153,7 @@
                 font-size: 36px;
             }
             .show-video {
-                width: 560px;
+                width: 100%;
                 height: 315px;
             }
             @media screen and (max-width: 1400px) {
@@ -186,10 +164,6 @@
                     font-size: 32px;
                 }
                 .head-box {
-                    margin-left: 0px;
-                    margin-right: 0px;
-                }
-                .head-video {
                     margin-left: 0px;
                     margin-right: 0px;
                 }
@@ -261,17 +235,14 @@
         </style>
     </head>
 <body>
-        <!-- <div class=" bg2">
-            <img src="img/bg-texturecolor-2.png" alt="" width="100%">
-        </div> -->
     <div class="row">
         <div class="col-12 bg1">
             <img src="img/banner-home2.png" alt="" width="100%">
         </div>
     </div>
-        <div class="bg3">
-            <img src="img/image-parkintro.png" alt="" width="100%">
-        </div>
+    <!-- <div class="bg3">
+        <img src="img/image-parkintro.png" alt="" width="100%">
+    </div> -->
     <header id="page-topbar">
         <div class="header-gradient"></div>
         <div class="top-bar"></div>
@@ -316,14 +287,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="row head-video">
-                    <div class="col-md-6 col-sm-12 text-center mb-3">
+                <div class="row">
+                    <div class="col-md-4 col-sm-12 text-center mb-3">
                         <iframe class="show-video" src="https://www.youtube.com/embed/P45g-aLCOqA?si=5aBg1n9s4F672KU9" title="YouTube video player" 
                             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                         </iframe>
                     </div>
-                    <div class="col-md-6 col-sm-12 text-center mb-3">
+                    <div class="col-md-4 col-sm-12 text-center mb-3">
                         <iframe class="show-video" src="https://www.youtube.com/embed/i5f3wioibHA?si=dmD8D6XkaOPrzxHr" title="YouTube video player" 
+                            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+                        </iframe>
+                    </div>
+                    <div class="col-md-4 col-sm-12 text-center mb-3">
+                        <iframe class="show-video" src="https://www.youtube.com/embed/oU0Q1mL8o70?si=3xP0HQTMSIAaL2Qt" title="YouTube video player" 
                             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
                         </iframe>
                     </div>
@@ -402,6 +378,9 @@
                             </a>
                         </svg>
                     </div>
+                </div>
+                <div class="row">
+                    <img src="img/image-parkintro.png" alt="" width="100%">
                 </div>
                 <div class="row dino-twin">
                     <div class="offset-1 col-2">
