--- a/test2.html
+++ b/test2.html
@@ -13,6 +13,7 @@
             body {
                 background: url('img/bg-texturecolor.png');
                 background-repeat: repeat-y;
+                background-repeat: repeat-x;
             }
             .bg1 {
                 top: 0px;
@@ -106,7 +107,11 @@
     </head>
 <body>
     <header id="page-topbar">
-        <div class="header-gradient"></div>
+        <div class="row">
+            <div class="col-12 header-gradient">
+                <img src="../img/header-gradient.png" alt="" width="100%">
+            </div>
+        </div>
         <div class="top-bar"></div>
     </header>
     <div class="page-content">
