--- a/aboutus.html
+++ b/aboutus.html
@@ -30,6 +30,7 @@
             body {
                 background: url('img/bg-texturecolor.png');
                 background-repeat: repeat-y;
+                background-repeat: repeat-x;
             }
             .bg1 {
                 width: 100%;
@@ -64,11 +65,8 @@
             .header-gradient {
                 top: 0px;
                 left: 0px;
-                width: 100%;
-                height: 100%;
-                background: transparent url('img/header-gradient.png') 0% 0% no-repeat padding-box;
                 position: absolute;
-                opacity: 1;
+                padding: 0;
             }
             
             .dino-sketch-01 {
@@ -196,8 +194,10 @@
         </div>
     </div>
     <header id="page-topbar">
-        <div class="header-gradient">
-            <img src="img/header-gradient.png" alt="" width="100%">
+        <div class="row">
+            <div class="col-12 header-gradient">
+                <img src="img/header-gradient.png" alt="" width="100%">
+            </div>
         </div>
         <div class="top-bar"></div>
     </header>
