--- a/dinosaurs/Therizinosaurus.html
+++ b/dinosaurs/Therizinosaurus.html
@@ -29,6 +29,7 @@
             body {
                 background: url('../img/bg-texturecolor.png');
                 background-repeat: repeat-y;
+                background-repeat: repeat-x;
             }
             .bg1 {
                 width: 100%;
@@ -75,13 +76,6 @@
                 height: 435px;
                 position: absolute;
             }
-            .highlight {
-                top: -600px;
-                left: 970px;
-                width: 950px;
-                height: 860px;
-                position: absolute;
-            }
             @media screen and (max-width: 1400px) {
                 .leaf-sketch-02 {
                     display: none;
@@ -95,6 +89,10 @@
                 }
             }
             @media screen and (max-width: 600px) {
+                .highlight {
+                    top: -105px !important;
+                    left: 155% !important;
+                }
                 .d-content {
                     margin-left: 0px !important;
                     margin-right: 0px !important;
@@ -129,7 +127,11 @@
         </div>
     </div>
     <header id="page-topbar">
-        <div class="header-gradient"></div>
+        <div class="row">
+            <div class="col-12 header-gradient">
+                <img src="../img/header-gradient.png" alt="" width="100%">
+            </div>
+        </div>
         <div class="top-bar"></div>
     </header>
     <div class="page-content">
