--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             body {
                 background: url('img/bg-texturecolor.png');
                 background-repeat: repeat-y;
+                background-repeat: repeat-x;
             }
             .bg1 {
                 width: 100%;
@@ -38,11 +39,8 @@
             .header-gradient {
                 top: 0px;
                 left: 0px;
-                width: 100%;
-                height: 200px;
-                background: transparent url('img/header-gradient.png') 0% 0% no-repeat padding-box;
                 position: absolute;
-                opacity: 1;
+                padding: 0;
             }
             .leaf-sketch-01 {
                 top: 1088px;
@@ -244,7 +242,11 @@
         <img src="img/image-parkintro.png" alt="" width="100%">
     </div> -->
     <header id="page-topbar">
-        <div class="header-gradient"></div>
+        <div class="row">
+            <div class="col-12 header-gradient">
+                <img src="img/header-gradient.png" alt="" width="100%">
+            </div>
+        </div>
         <div class="top-bar"></div>
     </header>
     <div id="layout-wrapper">
