--- a/parkmap/parkmap.html
+++ b/parkmap/parkmap.html
@@ -79,12 +79,14 @@
             .btn-first {
                 width: 400px;
             }
+            @media screen and (max-width: 1680px) {
+                .btn-first {
+                    width: 100% !important;
+                }
+            }
             @media screen and (max-width: 1400px) {
                 .bg1 {
                     background-size: contain;
-                }
-                .btn-first {
-                    width: 100% !important;
                 }
             }
             @media screen and (max-width: 600px) {
