edit li margin bottom

--- a/ticket.html
+++ b/ticket.html
@@ -248,7 +248,7 @@
                             <ul>
                                 <li class="font-size-28 mt-2">Tickets are valid on the selected date only.</li>
                                 <li class="font-size-28 mt-2">Tickets are non-refundable.</li>
-                                <li class="font-size-28 mt-2" style="margin-bottom: 100px;">Company reserves the rights to close the park or any part of it and/or suspend or cancel due to inclement weather, essential maintenance.</li>
+                                <li class="font-size-28 mt-2">Company reserves the rights to close the park or any part of it and/or suspend or cancel due to inclement weather, essential maintenance.</li>
                                 <li class="font-size-28 mt-2" style="margin-bottom: 100px;">Dino Park Phuket reserves the right to suspend the sale of park tours ticket and offer only playing mini-golf ticket during peak or busiest times to ensure guest satisfaction.</li>
                             </ul>
                             
